eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Case_Type_Helper__c.object
<CustomObject>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <label>Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Option__c</fullName>
        <formula>Parent__r.Option__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Case_Type_Helper__c</referenceTo>
        <relationshipLabel>Case Type Helper</relationshipLabel>
        <relationshipName>Case_Type_Helper</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Case Type Helper</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Display_Order__c</columns>
        <columns>Internal_Staff__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Option__c</columns>
        <columns>Parent__c</columns>
        <columns>Parent_Option__c</columns>
        <columns>RecordType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OP-{0000}</displayFormat>
        <label>Option No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Type Helper</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>